[package]
name = "pgmumbo"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pgmumbo"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg14"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg_test = []

[dependencies]
pgrx = "=0.12.0-beta.1"
milli = { git = "https://github.com/meilisearch/meilisearch.git", tag = "v1.9.0" }

[dev-dependencies]
pgrx-tests = "=0.12.0-beta.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
