[package]
name = "pgmumbo"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pgmumbo"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg14"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg_test = []

[dependencies]
pgrx = "=0.12.0-beta.3"
milli = { git = "https://github.com/meilisearch/meilisearch.git", tag = "v1.9.0" }
filter-parser = { git = "https://github.com/meilisearch/meilisearch.git", tag = "v1.9.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
ciborium = "0.2"
serde_nested_with = "0.2.5"
ouroboros = "0.18"

[dev-dependencies]
pgrx-tests = "=0.12.0-beta.3"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
